--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -36,14 +36,12 @@ jobs:
 
       - name: Install Wpt Update Uitls
         shell: bash
-        run: npm install -g @node-core/utils
-
-      - name: Write Credential File
-        shell: bash
         env:
           ACCESS_TOKEN: ${{ secrets.FOREVER_PERSONAL_GITHUB_ACCESS_TOKEN }}
         run: |
-          echo "{ \"username\": \"tsctx\", \"token\": \"${{ secrets.FOREVER_PERSONAL_GITHUB_ACCESS_TOKEN }}\" }" >> ~/.ncurc
+          npm install -g @node-core/utils
+          ncu-config set --global username tsctx
+          ncu-config set --global token tsctx ${{ secrets.FOREVER_PERSONAL_GITHUB_ACCESS_TOKEN }}
 
       - name: Update Wpt
         shell: bash
