--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           pr_title="chore(wpt): update wpt"
           base_branch="${{ github.event.repository.default_branch }}"
-          echo "branch_name=$(gh pr list --state open -S '${pr_title} in:title' -B ${base_branch} -L 1 -jq ".[] | [.headRefName]" --json headRefName | awk -F, '{print $1}' | sed -e 's/"//g')"
+          echo "branch_name=$(gh pr list --state open -S '${pr_title} in:title' -B ${base_branch} -L 1 --jq ".[] | [.headRefName]" --json headRefName | awk -F, '{print $1}' | sed -e 's/"//g')"
 
       - name: Commit Patch
         if: ${{ steps.update.outputs.should_update_wpt }}
