--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -63,7 +63,7 @@ jobs:
           done <<< $files
 
       - name: Commit Patch
-        if: ${{ steps.update.outputs.should_update_wpt == "true" }}
+        if: ${{ steps.update.outputs.should_update_wpt == 'true' }}
         shell: bash
         id: commit-patch
         run: |
@@ -77,7 +77,7 @@ jobs:
           echo "branch=$branch" > "$GITHUB_OUTPUT"
 
       - name: Create PR
-        if: ${{ steps.update.outputs.should_update_wpt == "true" && steps.check-pr.outputs.branch_name == "" }}
+        if: ${{ steps.update.outputs.should_update_wpt == 'true' && steps.check-pr.outputs.branch_name == '' }}
         uses: actions/github-script@v7
         with:
           script: |
