--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -55,7 +55,7 @@ jobs:
           npm run update:wpt          
           echo "should_update_wpt=false" > "$GITHUB_OUTPUT"
 
-          files=$(git diff origin/${{ github.event.repository.default_branch }} HEAD --name-only)
+          files=$(git diff origin/${{ github.event.repository.default_branch }} --name-only)
           while IFS= read -r file; do
             if [[ $file == test/fixtures/wpt/* ]]; then
               echo "should_update_wpt=true" > "$GITHUB_OUTPUT"
