--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -56,11 +56,12 @@ jobs:
           echo "should_update_wpt=false" > "$GITHUB_OUTPUT"
 
           files=$(git diff origin/${{ github.event.repository.default_branch }} --name-only)
-          while IFS= read -r file; do
+          echo $files | while IFS= read -r file; do
             if [[ $file == test/fixtures/wpt/* ]]; then
               echo "should_update_wpt=true" > "$GITHUB_OUTPUT"
             fi
-          done <<< $files
+          done
+          # <<< $files
 
       - name: Commit Patch
         if: ${{ steps.update.outputs.should_update_wpt == 'true' }}
