--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -56,7 +56,7 @@ jobs:
           echo "should_update_wpt=false" > "$GITHUB_OUTPUT"
           # origin/${{ github.event.repository.default_branch }}
           files=$(git diff HEAD --name-only)
-          echo $files | while IFS= read -r file; do
+          while IFS= read -r file; do
             if [[ $file == test/fixtures/wpt/* ]]; then
               echo "should_update_wpt=true" > "$GITHUB_OUTPUT"
             fi
