--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -47,9 +47,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pr_title="chore(wpt): update wpt"
-          
-          ${{ github.event.repository.default_branch }}"
-          echo "branch_name=$(gh pr list --state open -S "'${pr_title}' in:title" -B ${base_branch} -L 1 --jq ".[] | [.headRefName]" --json headRefName | jq '.[0]' | sed -e 's/"//g')" > "$GITHUB_OUTPUT"
+          base_branch="${{ github.event.repository.default_branch }}"
+          echo "branch_name=$(gh pr list --state open -S "\"${pr_title}\" in:title" -B ${base_branch} -L 1 --jq ".[] | [.headRefName]" --json headRefName | jq '.[0]' | sed -e 's/"//g')" > "$GITHUB_OUTPUT"
 
       - name: Update Wpt
         shell: bash
