--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -84,19 +84,18 @@ jobs:
           echo "branch=$branch" > "$GITHUB_OUTPUT"
 
       - name: Create PR
-        if: ${{ steps.check-update.outputs.should_update_wpt == 'true' }}
+        if: ${{ steps.check-update.outputs.should_update_wpt == 'true' && steps.check-pr.outputs.branch_name == '' }}
         uses: actions/github-script@v7
         with:
           script: |
             const should_update_wpt = ${{ steps.check-update.outputs.should_update_wpt }};
-            const hasPR = "${{ steps.check-pr.outputs.branch_name }}";
-            if (should_update_wpt && !hasPR) {
-                await github.rest.pulls.create({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    head: "${{ steps.commit-patch.outputs.branch }}",
-                    base: "${{ github.event.repository.default_branch }}",
-                    title: `chore(wpt): update wpt`,
-                    body: ""
-                });
+            if (should_update_wpt) {
+              await github.rest.pulls.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                head: "${{ steps.commit-patch.outputs.branch }}",
+                base: "${{ github.event.repository.default_branch }}",
+                title: `chore(wpt): update wpt`,
+                body: "Automatic wpt updates"
+              });
             }
