--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -32,7 +32,7 @@ jobs:
         shell: bash
         run: |
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions"
+          git config --global user.name "github-actions[bot]"
 
       - name: Install Wpt Update Utils
         shell: bash
