--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           pr_title="chore(wpt): update wpt"
           base_branch="${{ github.event.repository.default_branch }}"
-          echo "branch_name=$(gh pr list --state open -S "\"${pr_title}\" in:title" -B ${base_branch} -L 1 --jq ".[] | [.headRefName]" --json headRefName | jq '.[0]' | sed -e 's/"//g')" > "$GITHUB_OUTPUT"
+          echo "branch_name=$(gh pr list --state open -A "app/github-actions" -S "\"${pr_title}\" in:title" -B ${base_branch} -L 1 --jq ".[] | [.headRefName]" --json headRefName | jq '.[0]' | sed -e 's/"//g')" > "$GITHUB_OUTPUT"
 
       - name: Update Wpt
         shell: bash
@@ -61,8 +61,16 @@ jobs:
         run: |
           echo "should_update_wpt=false" > "$GITHUB_OUTPUT"
           git add test/fixtures/wpt/*
-          # origin/${{ github.event.repository.default_branch }}
-          files=$(git diff HEAD --name-only)
+          if ["${{ steps.check-pr.outputs.branch_name }}"]; then
+            files=$(git diff origin/${{ github.event.repository.default_branch }}...origin/${{ steps.check-pr.outputs.branch_name }} --name-only)
+            while IFS= read -r file; do
+              echo "should_update_wpt=true" > "$GITHUB_OUTPUT"
+              exit 0
+            done <<< $files
+            files=$(git diff origin/${{ steps.check-pr.outputs.branch_name }} --name-only)
+          else
+            files=$(git diff HEAD --name-only)
+          fi
           while IFS= read -r file; do
             if [[ $file == test/fixtures/wpt/* ]]; then
               echo "should_update_wpt=true" > "$GITHUB_OUTPUT"
