--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -62,7 +62,7 @@ jobs:
           echo "should_update_wpt=false" > "$GITHUB_OUTPUT"
           git add test/fixtures/wpt/*
           if ["${{ steps.check-pr.outputs.branch_name }}"]; then
-            files=$(git diff origin/${{ github.event.repository.default_branch }}...origin/${{ steps.check-pr.outputs.branch_name }} --name-only)
+            files=$(git diff origin/${{ github.event.repository.default_branch }}...origin/${{ steps.check-pr.outputs.branch_name }}^ --name-only)
             while IFS= read -r file; do
               echo "should_update_wpt=true" > "$GITHUB_OUTPUT"
               exit 0
