--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -72,7 +72,7 @@ jobs:
               echo "should_update_wpt=true" > "$GITHUB_OUTPUT"
               exit 0
             done <<< $files
-            git add .
+            echo "Fy"
             files=$(git diff origin/${{ steps.check-pr.outputs.branch_name }} --name-only)
           else
             files=$(git diff HEAD --name-only)
