--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -67,7 +67,7 @@ jobs:
           echo "should_update_wpt=false" > "$GITHUB_OUTPUT"
           git add test/fixtures/wpt/*
           if [ -n "${{ steps.check-pr.outputs.branch_name }}" ]; then
-            if [ "$(git rev-parse origin/${{ github.event.repository.default_branch }})" != "$(git rev-parse origin/${{ steps.check-pr.outputs.branch_name }}^)" ]; then
+            if [ "$(git rev-parse origin/${{ github.event.repository.default_branch }})" != "$(git rev-parse "origin/${{ steps.check-pr.outputs.branch_name }}^")" ]; then
               files=$(git diff origin/${{ github.event.repository.default_branch }}...origin/${{ steps.check-pr.outputs.branch_name }}^ --name-only)
               while IFS= read -r file; do
                 echo "should_update_wpt=true" > "$GITHUB_OUTPUT"
