--- a/.github/workflows/automatic-wpt-update-pr.yml
+++ b/.github/workflows/automatic-wpt-update-pr.yml
@@ -90,7 +90,7 @@ jobs:
         id: commit-patch
         run: |
           branch="chore/update-wpt-$(date '+%Y-%m-%d-%H')"
-          if ["${{ steps.check-pr.outputs.branch_name }}"]; then
+          if [ -n "${{ steps.check-pr.outputs.branch_name }}" ]; then
             branch="${{ steps.check-pr.outputs.branch_name }}"
           fi
           git add test/fixtures/wpt/*
